Fixing float overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -650,3 +650,7 @@ body {
       border-radius:10px;
    }  
 }
+
+.clear-both {
+    clear:both;
+}
